# msp430fr5949-hal

./: .gitignore  Cargo.toml  README.md  Xargo.toml  memory.x  run.sh
.cargo/: config
examples/: alternate.rs  blinky.rs  blinky2.rs  capture.rs  capture_intr.rs  clocks.rs  display.rs  display2.rs  echo.rs  echo2.rs  gpio_interrupts.rs  loopback.rs  myecho.rs  myecho2.rs  myecho3.rs  nrfrx-display.rs  nrfrx.rs  nrftx.rs  pwm.rs  rtc.rs  timer.rs
src/: capture.rs  clock.rs  delay.rs  fram.rs  gpio.rs  i2c.rs  lib.rs  pmm.rs  prelude.rs  pwm.rs  rtc.rs  serial.rs  spi.rs  timer.rs  watchdog.rs
src/hw_traits/: eusci.rs  gpio.rs  timerb.rs
